# software-renderer-c

./: .gitignore  CMakeLists.txt  camera.c  camera.h  constants.h  draw.c  draw.h  inputs.c  inputs.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  model.c  model.h  sdl_gfx.c  sdl_gfx.h  sort.c  sort.h  texture.c  texture.h  vectors.c  vectors.h  z_buffer.c  z_buffer.h
